# green-shark

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: CI_pipeline.yml  build_test.yml  pipeline.yml
daemon/: green-shark.service
docs/: dbus.org  green_sharkd.org
src/: main.rs
src/client/: main.rs
src/daemon/: main.rs
src/lib/: cli.rs  error.rs  frequency.rs  mod.rs  state.rs  transaction.rs
tests/: frequency.rs  state.rs  transaction.rs
tests/data/: read_single_transaction.json  write_initial_state.json  write_single_transaction.json
