[package]
name = "green-shark"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"

[[bin]]
path = "src/main.rs"
name = "green-shark"

[dependencies]
notify-rust = "4.10.0"
signal-hook = "0.3.17"
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
zbus = {version = "3", default-features = false, features = ["tokio"]}
tokio = {version = "1", features = ["full"]}
futures-util = "0.3.30"
futures = "0.3.30"
event-listener = "4.0.3"
