[package]
name = "green-shark"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/mod.rs"

[[bin]]
path = "src/daemon/main.rs"
name = "green-sharkd"

[[bin]]
path = "src/client/main.rs"
name = "green-shark"

[dependencies]
notify-rust = "4.10.0"
signal-hook = "0.3.17"
zbus = {version = "3", default-features = false, features = ["tokio"]}
tokio = {version = "1", features = ["full"]}
futures-util = "0.3.30"
futures = "0.3.30"
event-listener = "4.0.3"
chrono = "0.4.33"
rand = "0.8.5"
serde_json = "1.0"
serde = "1.0.197"
thiserror = "1.0.20"
clap = { version = "4.5.3", features = ["derive", "cargo"] }
clap-help = "1.2.0"
termimad = "0.29.1"
